src/components/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

#map {
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  margin-bottom: 20px;
  width: 800px;
}

/* Sets size of map, which has class name "leaflet-container" */
.leaflet-container {
  width: 800px;
  height: 600px;
}

.selection {
  align-content: center;
  padding: 40px;
}

h1 {
  text-align: center;
}

h2 {
  text-align: left;
}

